--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Librilisten Podcast Service"
     />
     <base href="https://cmp24.host.cs.st-andrews.ac.uk/"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
